Bug 999315.  Revert alert(undefined) to showing the string "undefined" again, like it used to, pending the spec getting sorted out.  r=peterv